--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
       <md-nav-item md-nav-sref="inventory" name="inventory">
         Inventário
       </md-nav-item>
-      <md-nav-item md-nav-sref="shipments" name="shipments">
+      <md-nav-item md-nav-sref="shipments.list" name="shipments">
         Carregamentos
       </md-nav-item>
       <md-nav-item md-nav-sref="operations" name="operations">
